--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: c
 compiler: gcc
 before_install:
   - sudo apt-get update -qq
+  - sudo apt-get install gcc-multilib
   - sudo apt-get install qemu -qqy
 script: make
