--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,4 @@
-language: c
-compiler: gcc
+language: go
 before_install:
-  - sudo apt-get update -qq
-  - sudo apt-get install gcc-multilib
-  - sudo apt-get install qemu -qqy
-script: make
+  - go get github.com/boltdb/bolt/...
+script: ./run.bat
