Added Project Files

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,4 @@
-build-*
-*.swp
-*~
-tags
-TAGS
-local.mk
-*.orig
-cscope.*
-doit
-t
-tagit
-blk.bin
-*.dSYM
-scripts/toolpaths.local
-.vscode
-.idea
+.bob.cache
+out/
+.out.*
+disk.img
